assets/css/style.css
/* top of this file are the styles uneffected by media queries */

html, body {
  height: 100%;
  margin: 0;
  padding: 0;
  font-family: "sofia-pro-soft",sans-serif;
  font-weight: lighter;
  box-sizing: border-box;
  font-size: 1em;
}

*, *:before, *:after {
  box-sizing: inherit;
}

p {
  margin: 0;
  padding: 5px 0;
}

.menubar {
  width: 100%;
  position: fixed;
  background-color: #FFF;
  z-index: 2;
}

.menubar--logo {
  background-image: url(img/sas_logo.png);
  background-repeat: no-repeat;
  background-position: left top;
  background-size: contain;
  display: inline-block;
}

.menubar--mainnav {
  list-style: none;
  text-align: center;
  white-space: nowrap;
}

.menubar--mainnav li {
  display:inline-block;
}

.menubar--mainnav a {
  color: #787878;
  text-decoration: none;
}

.content {
  color: #FFF;  
  text-align: center;
}

.content-top {
  background-color: #9CD2D7;
}

.content-bottom {
  background-color   : #79C3BF;
  background-image   : url("img/content-top-bg.png");
  background-repeat  : no-repeat;
  background-position: left top;  
  background-size    : 100%;
  padding-bottom     : 175px;
}


hr.content-divider {
  height          : 2px;
  border          : 0;
  background-color: #fff;
  color           : #fff;
}

.content-lineheight66px {
  line-height: 66px;
}

.img--divider {
  width: 100%;
  margin-bottom: -5px;
  background-color: #9CD2D7;
}

/* svg down arrow graphics */
.down_arrow {
  width: 115px;
  height: 115px;
}

.cls-1,.cls-2 {
    fill:none;
    stroke:#fff;
    stroke-miterlimit:10;
    stroke-width:3px;
}

.cls-2 {
  stroke-width:4px;
  stroke-linecap:round;
}

.spacer {
  height: 38px;
}


.content-searchbar {
  background-color: #22A09E;
  background-image:url("img/content-bottom-bg.png");
  background-repeat:no-repeat;
  background-position:left top;  
  background-size: 100%;
}

.localservices-search {
  -webkit-appearance: textfield;
  display: block;
  width: 100%;
  font-size: 50px;
  border-radius: 30px;
  border: none;
  background-color: #ABCFCF;
  color: #fff;
  text-align: center;
}

::-webkit-input-placeholder {
  color: white;
}



/* ------------------------------------------- */

/* below 380px wide styles */

.menubar-inner {
  padding: 28px 14% 35px 4%;
}

.menubar--mainnav {
  border-top: 2px solid #070;
  margin: 0;
  padding: 0;
}

.menubar--mainnav li {
  width: 27%;
  text-align: center;
}

.menubar--mainnav li:first-child {
  text-align: left;
  width: 21%;
}

.menubar--mainnav li:last-child {
  text-align: right;
  width: 20%;
}

.menubar--mainnav a {
  font-size: 3.2vw;
}

.menubar--logo {
  width: 35%;
  padding-top: 10%;
}

/* - */

.content-top {
  padding-top: 23%;
}

.content-top p {
  font-size: 6vw;
  margin-bottom: 19px;
}

.content-inner {
  margin: auto;
}

.content-inner-top {
  width     : 80%;
  margin-top: 130px;
}

hr.content-divider-top {
  margin: 36px 0 53px 0;
}

.content-xl {
  display      : block;
  font-size    : 11vw;
  line-height  : 15vw;
  margin-bottom: 10px;
}

.content-lg {
  font-size    : 8vw;
}

.content-lgp {
  font-size    : 10vw;
}

.content-inner-bottom {
  padding-top: 122px;
}

/* - */

.homepage_buttons {
  margin-top    : 75px;
  padding-bottom: 143px;
  margin-left   : 35px;
}

.button_container {
  text-align   : left;
  margin-bottom: 30px;
}

.button_container img {
  width : 65px;
  height: 65px;
  vertical-align: top;
}

.button_text {
  display    : inline-block;
  max-width  : 152px;
  font-size  : 6vw;
  margin-left: 10px
}

.homepage_buttons p {
  font-size: 4vw;
  line-height: 21px;
}

.content-searchbar {
  padding: 0 35px;
}

.localservices-search {
  height: 45px;
  font-size: 8vw;
}

/* ------------------------------------------- */

/* Small Devices, latest Phones */ 
@media only screen and (min-width : 380px) {
  .menubar-inner {
    padding-right: 5%;
  }

  .menubar--mainnav a {
    font-size: 3.5vw;
  }

  .menubar--mainnav li {
    width: 24%;
    text-align: right;
  }

  .menubar--mainnav li:first-child {
    width: 27%;
  }

  .menubar--mainnav li:last-child {
    width: 20%;
  }

}

/* ------------------------------------------- */

/* Small Devices, Tablets */
@media only screen and (min-width : 768px) {

}

/* ------------------------------------------- */

/* Medium Devices, Desktops */
@media only screen and (min-width : 992px) {

  .menubar--mainnav {
    display       : inline-block;
    margin-top    : 19px;
    margin-left   : 8%;
    border-top    : 0px;
    vertical-align: top;
  }

  .menubar-inner {
    padding-bottom: 13px;
  }

  .menubar--logo {
    padding-top : 5%;
    width       : 16%;
  }

  .menubar--mainnav li {
    width      : 41%;
    text-align : center;
  }

  .menubar--mainnav a {
    font-size : 1.68vw;
  }

  /* - */

  .content {
    font-size  : 51px;
    line-height: 53px;    
  }

  .content-top {
    padding-top: 1%;
  }

  .content-inner-top {
    margin-top: 300px;
    max-width : 1117PX;
  }

  .content-inner {

  }

  .content-top p {
    margin-bottom: 48px;
  }

  hr.content-divider-top {
    margin: 78px 0 97px 0;
  }

  .content-xl {
    font-size: 86px;
  }

  .content-lg {
    display: none;
  }

  .content-unhelpful {
    font-size  : 72px;
    margin-left: -38px;
  }

  /* - */

  .homepage_buttons {
    margin-top : 178px;
    margin-left: 35px;
  }

  .button_container {
    display      : inline-block;
    margin-bottom: 30px;
    height       : 219px;
    width        : 680px;
  }

  .button_container img {
    width :  219px;
    height: 219px;
  }

  .button_text {
    display    : inline-block;
    top        : -53px;
    margin-left: 15px;
    height     : 150px;
    max-width   : 400px;
  }

}

/* ------------------------------------------- */

/* Large Devices, Wide Screens */
@media only screen and (min-width : 1700px) {

  .menubar--logo {
    width: 15%;
    padding-top: 4%;
  }

  .menubar--mainnav {
    margin-left: 8%;
  }

  .menubar--mainnav li {
    width: 41%;
  }

  .menubar--mainnav a {
    font-size: 1.68vw;
  }

}

